--- a/css.html
+++ b/css.html
@@ -24,7 +24,7 @@
     </div>
     <div>
         <img 
-        src="https://appsmaventech.com/images/blog/The-Evolution-Of-Web-Development-Via-Machine-Learning.jpg" 
+        src="Your Image" 
         alt="No image found" class="borderImg">
     </div>
 </body>
