--- a/login.html
+++ b/login.html
@@ -19,7 +19,7 @@
             <div class="col-sm-8">
                 <div class="card login-card">
                     <div class="card-body">
-                        <img src="https://f6s-public.s3.amazonaws.com/profiles/2419349_th1.jpg" alt="No image found" 
+                        <img src="Your Image" alt="No image found" 
                         class="img-fluid login-image">
 
                         <form>
